--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Danh (Cody) Dang
 #image:
-#description:
+description: Aspiring Health Informatics student who is looking forward to working as healthcare data analyst.  
+In addition to my experience working in a healthcare environment, I also have experience in research. My major is Biotechnology.
 theme: jekyll-theme-minimal
