--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Danh (Cody) Dang
 #image:
-description: Aspiring Health Informatics student who is looking forward to working as healthcare data analyst.  
-In addition to my experience working in a healthcare environment, I also have experience in research. My major is Biotechnology.
+#description:
 theme: jekyll-theme-minimal
